improve tests + fix issues