@@ -1,39 +1,35 @@
 package pl.piomin.services.order;
 
-import java.util.Arrays;
-import java.util.Random;
-
 import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.web.client.TestRestTemplate;
-
 import pl.piomin.services.messaging.Order;
 import pl.piomin.services.messaging.OrderStatus;
 
+import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+
+
+@SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 public class OrderControllerTest {
 
-	TestRestTemplate template = new TestRestTemplate();
+	@Autowired
+	TestRestTemplate template;
 
 	@Test
 	public void testOrder() throws InterruptedException {
-		for (int i = 0; i < 10; i++) {
-			sendAndAcceptOrder();
-			Thread.sleep(500);
-		}
-	}
-
-	private void sendAndAcceptOrder() {
-		try {
-			Random r = new Random();
-			Order order = new Order();
-			order.setCustomerId((long) r.nextInt(3) + 1);
-			order.setProductIds(Arrays.asList(new Long[] { (long) r.nextInt(10) + 1, (long) r.nextInt(10) + 1 }));
-			order = template.postForObject("http://localhost:8090", order, Order.class);
-			if (order.getStatus() != OrderStatus.REJECTED) {
-				template.put("http://localhost:8090/{id}", null, order.getId());
-			}
-		} catch (Exception e) {
-
-		}
+		Order order = new Order();
+		order.setStatus(OrderStatus.NEW);
+		order.setCustomerId(1L);
+		order.setProductIds(List.of(1L, 2L, 3L));
+		order.setPrice(1000);
+		order = template.postForObject("/", order, Order.class);
+		assertNotNull(order);
+		assertNotNull(order.getId());
+		assertEquals(OrderStatus.PROCESSING, order.getStatus());
 	}
 	
 }
